# soulspeaks

./: README.md
backend/: CMakeLists.txt  README.md
backend/src/: api.cpp  api.hpp  db.cpp  db.hpp  email.cpp  email.hpp  hash.cpp  hash.hpp  main.cpp
docs/: index.html
freeswitch/: README.md
frontend/: README.md  package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  router.js  twilio.config.js
frontend/src/components/: PageLayout.vue
frontend/src/views/: AddFunds.vue  AddTrunk.vue  BuyDids.vue  Dashboard.vue  Home.vue  Login.vue  ManageDids.vue  Signup.vue  SipClient.vue  Transactions.vue
soulspeaks-mobile/: App.vue  app.json  package-lock.json  package.json
